Applied Google Code formatter